[package]
name = "sdp-types"
version = "0.1.0"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
repository = "https://github.com/sdroege/sdp-types"
edition = "2018"
license = "MIT"
keywords = ["sdp", "network", "protocol", "multimedia", "streaming"]
categories = ["network-programming", "multimedia"]
description = "SDP (RFC 4566) types, parser and serializer"
readme = "README.md"

[dependencies]
bstr = "0.2.11"
fallible-iterator = "0.2"
