[package]
name = "sdp-types"
version = "0.1.8"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
repository = "https://github.com/sdroege/sdp-types"
edition = "2018"
license = "MIT"
keywords = ["sdp", "network", "protocol", "multimedia", "streaming"]
categories = ["network-programming", "multimedia"]
description = "SDP (RFC 4566) types, parser and serializer"
readme = "README.md"
rust-version = "1.65"

[dependencies]
bstr = { version = "1", default-features = false }
fallible-iterator = "0.3"
hex = "0.4.3"
serde = { version = "1.0", optional = true, features = ["derive"] }
thiserror = "1"

[features]
serde = ["dep:serde"]
